<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_name"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_id"
            android:textColor="@color/text_secondary" />

        <TextView
            android:id="@+id/txtLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loại: Book"
            android:textColor="@color/text_secondary" />

        <TextView
            android:id="@+id/txtPhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Phí mượn: 100"
            android:textColor="@color/danger"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/success"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/danger"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
